<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/white"
    >

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="395dp"
        android:layout_height="368dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/clear"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="3"
                android:background="@drawable/circle"
                android:onClick="clear"
                android:text="@string/CLEAR"
                android:textColor="#F60606"



                android:textSize="38sp" />

            <Button
                android:id="@+id/parantesisi"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="2"
                android:background="@drawable/circle"
                android:onClick="parentheisi"
                android:text="@string/PARANTESISI"
                android:textColor="#040303"
                android:textSize="30sp" />

            <Button
                android:id="@+id/percentage"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="2"
                android:background="@drawable/circle"
                android:onClick="percentage"
                android:text="@string/PERCENTAGE"
                android:textColor="#070202"
                android:textSize="30sp" />

            <Button
                android:id="@+id/divide"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="2"
                android:background="@drawable/circle"
                android:onClick="DIVIDE"
                android:text="@string/DIVIDE"
                android:textColor="#0B0000"
                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/seven"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="2.5"
                android:background="@drawable/circle"
                android:onClick="SEVEN"
                android:text="@string/SEVEN"
                android:textColor="#090101"
                android:textSize="25sp" />

            <Button
                android:id="@+id/eight"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="2.5"
                android:background="@drawable/circle"
                android:onClick="EIGHT"
                android:text="@string/EIGHT"
                android:textColor="#0E0000"
                android:textSize="25sp" />

            <Button
                android:id="@+id/nine"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="2.5"
                android:background="@drawable/circle"
                android:onClick="NINE"
                android:text="@string/NINE"
                android:textColor="#0C0000"
                android:textSize="25sp" />

            <Button
                android:id="@+id/multiplication"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="2"
                android:background="@drawable/circle"
                android:onClick="MULTIPLICATION"
                android:text="@string/MULTIPLICATION"
                android:textColor="#070101"
                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/four"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="2.5"
                android:background="@drawable/circle"
                android:onClick="FOUR"
                android:text="@string/FOUR"
                android:textColor="#0C0808"
                android:textSize="25sp" />

            <Button
                android:id="@+id/five"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="2.5"
                android:background="@drawable/circle"
                android:onClick="FIVE"
                android:text="@string/FIVE"
                android:textColor="#0E0505"
                android:textSize="25sp" />

            <Button
                android:id="@+id/six"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="2.5"
                android:background="@drawable/circle"
                android:onClick="SIX"
                android:text="@string/SIX"
                android:textColor="#0E0505"
                android:textSize="25sp" />

            <Button
                android:id="@+id/substraction"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="2"
                android:background="@drawable/circle"
                android:onClick="substraction"
                android:text="@string/substraction"
                android:textColor="#0E0505"
                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/three"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="2.5"
                android:background="@drawable/circle"
                android:onClick="ONE"
                android:text="@string/ONE"
                android:textColor="#0E0505"
                android:textSize="25sp" />

            <Button
                android:id="@+id/two"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="2.5"
                android:background="@drawable/circle"
                android:onClick="two"
                android:text="@string/TWO"
                android:textColor="#0E0505"
                android:textSize="25sp" />

            <Button
                android:id="@+id/one"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="2.5"
                android:background="@drawable/circle"
                android:onClick="three"
                android:text="@string/THREE"
                android:textColor="#0E0505"
                android:textSize="25sp" />

            <Button
                android:id="@+id/addition"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="2"
                android:background="@drawable/circle"
                android:onClick="addition"
                android:text="@string/addition"
                android:textColor="#0E0505"
                android:textSize="25sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/plus_minus"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="2.5"
                android:background="@drawable/circle"
                android:onClick="plus_minus"
                android:text="@string/plus_minus"
                android:textColor="#0E0505"
                android:textSize="25sp" />

            <Button
                android:id="@+id/zero"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="2.5"
                android:background="@drawable/circle"
                android:onClick="ZERO"
                android:text="@string/ZERO"
                android:textColor="#0E0505"
                android:textSize="25sp" />

            <Button
                android:id="@+id/dot"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="2.5"
                android:background="@drawable/circle"
                android:onClick="dot"
                android:text="@string/dot"
                android:textColor="#0E0505"
                android:textSize="25sp" />

            <Button
                android:id="@+id/equal_to"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="2"
                android:background="@drawable/circle"
                android:onClick="equal_to"
                android:text="@string/equal_to"
                android:textColor="#56E60E"
                android:textSize="30sp" />
        </TableRow>
    </TableLayout>

    <EditText
        android:id="@+id/input_value"
        android:layout_width="373dp"
        android:layout_height="106dp"
        android:layout_marginTop="5dp"
        android:autofillHints="false"
        android:inputType="none"
        android:text="@string/text"
        android:textAlignment="textEnd"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.266"
        app:layout_constraintStart_toStartOf="@+id/tableLayout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.388"
        tools:ignore="LabelFor" />

    <ImageButton
        android:id="@+id/back"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="91dp"
        android:layout_height="76dp"
        android:layout_marginBottom="3dp"
        android:background="@drawable/backspace"
        android:contentDescription="@string/todo"


        android:onClick="back"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="@+id/tableLayout"
        app:layout_constraintHorizontal_bias="0.96"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>